# rust-mock-example

./: Cargo.toml  README.md
src/: lib.rs
src/domain/: boardgames.rs
src/port/: boardgames.rs
src/usecase/: get_boardgame.rs
