[package]
name = "rust-mock-example"
version = "0.1.0"
authors = ["Akio-m <ahigachika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
mockall = "0.10.0"
mockall_double = "0.2.0"
cfg-if = "1.0"

[dev-dependencies]
mockall = "0.10.0"